@@ -1,3 +1,8 @@
+2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca> 
+
+	Added Feature #12344: Migrate to t3lib_htmlmail to SwiftMailer thanks to Ernesto Baschny and Christopher
+
+	
 2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca>
 
 	Fixed bug #12377: Other link types than supported use the same type than the last found
